When switching a window from background to foreground, reinitialize the timers that should fire sooner than the background clamp would have allowed.  Bug 647001, r=bzbarsky